--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,14 @@ body {
     padding: 0;
     margin: 0;
 }
+
+a {
+color: #888;
+}
+a:hover {
+color: #444;
+}
+
 .document {
     text-align: center;
 }
@@ -104,5 +112,10 @@ body {
 
 
 .share {
-    margin-top: 30px;
+    margin: 30px;
+}
+
+.about {
+margin-top: 20px;
+}
 }
